# gwep_chem_finder

./: .env  .gitignore  Cargo.toml  README.md  data.db  recipes.DM
chem/: Cargo.toml
chem/src/: chemicals.rs
cli/: Cargo.toml
cli/src/: cli.rs  lib.rs  print.rs
config/: Cargo.toml
config/src/: settings.rs
core/: Cargo.toml  build.rs
core/src/: main.rs
data/: Cargo.toml  data.db  data.json
data/src/: chem_tree.rs  chemicals.rs  fetch.rs  initialize.rs  initialize_maps.rs  lib.rs  local.rs  parser.rs  search_engine.rs  sql.rs  update.rs
dm_pest/: Cargo.toml
dm_pest/src/: DM copy.pest  DM.pest  parser.rs
dm_reader/: Cargo.toml
dm_reader/src/: dm_error.rs  dm_reader.rs  lib.rs  scanner.rs  token.rs  token_type.rs
settings/: Cargo.toml  default_config.toml
settings/src/: settings.rs
src/: main.rs
