[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.11", features = ["blocking"]}
serde = {version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
pest = "2.3.0"
pest_derive = "2.3.0"
once_cell = "1.15.0"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.6"
async-recursion = "1.0.0"
sqlx = { version = "0.5.13", features = [ "runtime-tokio-native-tls" , "sqlite" ] }